$Id$

WARNING: Extra debug logging enabled for checking internet news dupes.
         This will just make bigger logfiles if you gate news.

				MBSEBBS History.

v0.35.03	06-Jul-2002

	general:
		Now compiles and installs on HP-PARISC hardware, tested with
		Debian 3.0 on a HP 712/80.

	upgrade:
		After installation restart mbtask.
		Start mbsetup, enter global configuration and exit and save.
		This will setup the new outbound queue path, default is
		/opt/mbse/var/queue.

	common.a:
		Added nodelist override to the nodelist lookup function.
		Added protection against emty rfc headers with only a space.
		Added test for HA archiver.

	mbinet.a:
		If during a connect a newsserver refuses the connection then
		don't close our side of the connection. This is a temporary
		solution, we should disconnect with timeout instead.

	lang:
		Corrected a spelling error in the Dutch language file.

	mbcico:
		Changed IsDoing information.
		Makes use of the node nodelist override settings.
		Fixed a bug that mbcico refused to do internet calls when one
		of the No IBN, No ITN or No IFC flags was set.

	mbout:
		Makes use of the node nodelist override settings.
		The file attach function now adds the file to the queue, by
		setting the semafore mailin mbfido will place the file in the
		real outbound.

	mbfido:
		Rollover now only sets IsDoing when it really does a date
		rollover.
		When a new tic area was created the first file received for
		that area was refused.
		Fixed a few problems with local UUCP created netmails.
		Added routing tables for special cases. Most systems don't
		need this.
		The route test command now works exactly as netmails do.
		Implemented directory inbound tossing and outbound queueing.
		Rewrote the outbound queue system, the queue now works for
		files also.
		Removed debug logline with extract of FILE_ID.DIZ.
		When a file is imported with a name that is already present,
		the existing filerecord is updated and not replaced.